Text align correction for show info

--- a/app/assets/stylesheets/Main.scss
+++ b/app/assets/stylesheets/Main.scss
@@ -289,7 +289,11 @@ h3 {
 }
 
 #show-info-box {
-  padding: 10px
+  padding: 10px;
+}
+
+#show-info-box p {
+  text-align: left;
 }
 
 #about {
